refactor the get titles response
